--- a/css/main.css
+++ b/css/main.css
@@ -167,7 +167,7 @@ nav ul li {
 /* Hero */
 .hero {
 	text-align: center;
-	background-image: url(../img/darksoul.jpg);
+	background-image: url(../img/1920x700.png);
 	width:100%;
 	height: 350px;
 	background-size: cover;
