--- a/css/main.css
+++ b/css/main.css
@@ -112,8 +112,8 @@ a:hover {
 		text-decoration: none;
 	}
 #rink {
-	font-size: 5px;
-	color: black;
+	font-size: 10px;
+	color: blue;
 	}
 
 /* Navbar */
